--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,13 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="navigation_drawer_open">Abrir menú</string>
     <string name="navigation_drawer_close">Cerrar menú</string>
+
+    <string-array name="default_filter_options">
+        <item>Hace 1 hora</item>
+        <item>Hace 12 horas</item>
+        <item>Hace 1 día</item>
+        <item>Hace 7 días</item>
+        <item>Todos los reportes</item>
+    </string-array>
+
 </resources>
